src/App.css
.App {
  text-align: center;
  display: grid;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

/* --------- Typography ---------- */

h1 {
  font-family: Outfit;
  font-weight: 100;
  color: #ffffff;
  font-size: 40px;
  padding-top: 0px;
  padding-bottom: 30px;
}

h2 {
  font-family: Outfit;
  font-size: 40px;
  font-weight: 100;
}

h3 {
  font-family: Outfit;
  font-weight: 400;
}

h4 {
  font-family: Outfit;
  font-weight: 300;
}

h5 {
  font-family: Outfit;
  font-size: 20px;
  font-weight: 300;
  color: #ffffff;
  line-height: 170%;
}

p {
  font-family: Outfit;
  font-size: 16px;
  font-weight: 300;
}

ul {
  font-family: Outfit;
  font-size: 16px;
  font-weight: 300;
}

li {
  font-family: Outfit;
  font-size: 16px;
  font-weight: 300;
}

/* --------- Button ---------- */

.btn-primary {
  background-color: #C47F43;
  border: none;
  border-radius: 0;
  font-family: Outfit;
  font-weight: 300;
  letter-spacing: 2px;
}

.btn-primary:hover {
  background-color: #BA7643;
  font-weight: 300;
}

.btn-primary:active {
  background-color: #BA7643;
  font-weight: 300;
}

.btn-primary:focus {
  background-color: #BA7643;
  font-weight: 300;
  box-shadow: 0 0 0 0.25rem #E0B394;
}

.btn-primary:active:focus {
  background-color: #BA7643;
  font-weight: 300;
  box-shadow: 0 0 0 0.25rem #E0B394;
}

/* --------- NavBar ---------- */
.navbar {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  font-family: Outfit;
  font-weight: 300;
  font-size: 14px;
  letter-spacing: 0.5px;
  padding: 20px 20px;
  z-index: 99 !important;
}

.logo {
  text-decoration: none;
  font-family: Sacramento;
  font-size: 36px;
  color: #000000;
  margin: 0 10px;
}

.logo:hover {
  color: #000000;
}

.nav-item {
  margin: 0 10px;
}

.dropdown-item {
  font-family: Outfit;
  font-size: 15px;
  letter-spacing: normal;
  color: #495057;
}


/* --------- Page 1 - Home Page ---------- */

.homepage {
  display: block;
}

.hero-banner {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
}

.hero-text-banner {
  height: 1000px;
  width: 36%;
  background-color: #C47F43;
  margin: 0;
  padding: 100px, 100px;
  text-align: left;
  position: relative;
  order: 1;
}

.hero-image-container {
  width: 64%;
  height: 1000px;
  margin: 0;
  padding: 0;
  display: inline-block;
  vertical-align: top;
  order: 2;
}

.hero-text-container {
  position: absolute;
  width: 70%;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.hero-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

@media (max-width: 950px) {
  .hero-text-banner {
    height: 400px;
    width: 100%;
    padding: 100px, 100px;
    order: 2;
  }

  .hero-text-container {
    width: 80%;
  }

  .hero-image-container {
    width: 100%;
    height: 600px;
    order: 1;
  }

  .hero-image {
    width: 100%;
    height: 100%;
  }
}

@media (max-width: 700px) {
  .hero-text-banner {
    height: 400px;
    width: 100%;
    order: 2;
  }

  .hero-text-container {
    width: 80%;
  }
}

.popular-pick {
  padding: 80px 60px;
}

.product-item {
  padding-top: 50px;
  padding-left: 0;
  padding-right: 0;
}

.product-image {
  width: 100%;
}

@media (max-width: 800px) {
  .popular-pick {
    padding: 80px 40px;
    margin: auto;
  }

  .product-image {
    width: 100%;
  }
}

.item-name {
  font: Outfit;
  font-weight: 400;
  margin-top: 10px;
  margin-bottom: 8px;
}

.item-name-link {
  font-family: Outfit;
  font-size: 16px;
  font-weight: 400;
  text-decoration: none;
  color: #1a1a1a;
}

.item-name-link:hover {
  color: #C47F43;
  font-weight: 600;
}

.item-name-link:focus {
  color: #BA7643;
  font-weight: 600;
}

.item-category {
  font: Outfit;
  font-weight: 500;
  color: #8f8f8f;
}

.product-category-even {
  padding: 20px 50px 5px 50px;
}

.product-category {
  padding: 20px 50px 5px 50px;
}

.category-image-container-odd {
  width: 50%;
  height: 500px;
  margin-top: 0;
  padding-left: 16px;
  display: inline-block;
  vertical-align: top;
}

.category-image-container-even {
  width: 50%;
  height: 500px;
  margin-top: 0;
  padding-right: 16px;
  display: inline-block;
  vertical-align: top;
}

.category-image {
  width: 100%;
  height: 500px;
  object-fit: cover;
}

.category-info-container-even {
  width: 50%;
  height: 500px;
  padding-left: 16px;
  display: inline-block;
}

.category-info-container-odd {
  width: 50%;
  height: 500px;
  padding-right: 16px;
  display: inline-block;
}

.category-info {
  height: 100%;
  background-color: #E3E3E3;
  margin: auto;
  position: relative;
}

.category-info-inner {
  position: absolute;
  width: 80%;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

@media (max-width: 800px) {
  .product-category {
    width: 100%;
    padding: 20px 30px;
    margin-bottom: 10px;
    display: block;
    display: flex;
    flex-wrap: wrap;
  }

  .category-image-container-even {
    width: 100%;
    height: 350px;
    display: block;
    padding-right: 0;
  }

  .category-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  .category-info-container-even {
    width: 100%;
    height: 380px;
    display: block;
    padding: 0;
  }

  .category-image-container-odd {
    width: 100%;
    height: 350px;
    display: block;
    padding-right: 0;
    padding-left: 0;
    order: 1;
  }

  .category-info-container-odd {
    width: 100%;
    height: 380px;
    display: block;
    padding: 0;
    order: 2;
  }
}
/* ... */

